--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
+    "sass-color-helpers": "^2.1.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
