Add page titles

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@apollo/client": "^3.0.0",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@gammastream/scully-plugin-http404": "^1.0.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
