--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "ng build",
     "deploy": "npm run codegen && ng build --prod && npm run scully",
     "test": "ng test",
+    "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "e2e:ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
     "codegen": "graphql-codegen --config codegen.yml",
     "scully": "scully",
     "scully:serve": "scully serve"
@@ -36,6 +38,7 @@
     "@scullyio/scully": "^1.0.0",
     "apollo-angular": "^2.0.4",
     "bootstrap": "^4.5.0",
+    "factory.ts": "^0.5.1",
     "graphql": "^15.3.0",
     "ngx-markdown": "^10.1.1",
     "rxjs": "~6.6.0",
@@ -63,6 +66,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-mocks": "^10.1.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
