--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,7 @@ jobs:
           node-version: '12'
       - name: Install Dependencies
         run: npm ci
+      - name: Build Project
+        run: npm run deploy
       - name: Run Unit Tests
         run: npm run test:ci
