--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,5 @@ jobs:
         run: npm run deploy
       - name: Run Unit Tests
         run: npm run test:ci
+      - name: Run E2E Tests
+        run: npm run e2e:ci
