--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@gammastream/scully-plugin-http404": "^1.0.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@scullyio/init": "^1.0.1",
     "@scullyio/ng-lib": "^1.0.0",
@@ -50,6 +49,8 @@
     "@angular-devkit/build-angular": "~0.1001.2",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
+    "@gammastream/scully-plugin-http404": "^1.0.4",
+    "@gammastream/scully-plugin-sitemap": "^1.0.4",
     "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/introspection": "1.17.8",
     "@graphql-codegen/typescript": "1.17.8",
@@ -59,6 +60,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "fast-xml-parser": "^3.17.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
