--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       "dom",
       "esnext.asynciterable"
     ],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
