--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,15 @@
 /dist
 /tmp
 /out-tsc
-# Only exists if Bazel was run
 /bazel-out
 scully.log
 /src/generated
 
 # dependencies
 /node_modules
+
+# environment variables
+.env
 
 # profiling files
 chrome-profiler-events*.json
