--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./webpack-dev.config.js"
+            },
             "outputPath": "dist/metex",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -37,6 +40,9 @@
           },
           "configurations": {
             "production": {
+              "customWebpackConfig": {
+                "path": "webpack-prod.config.js"
+              },
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -67,7 +73,7 @@
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
             "browserTarget": "metex:build"
           },
@@ -127,6 +133,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "metex"
+    }
+  },
+  "defaultProject": "metex",
+  "cli": {
+    "analytics": "d0908461-ddd9-4897-8c3e-452c03be2dee"
+  }
 }
