--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "e2e:ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
-    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen": "graphql-codegen --config codegen.yml -r dotenv/config",
     "scully": "scully",
-    "scully:serve": "scully serve",
-    "blog": "ng generate @scullyio/init:post --metaDataFile='./scully-blog.yml'"
+    "scully:serve": "scully serve"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +37,7 @@
     "@scullyio/scully": "^1.0.0",
     "apollo-angular": "^2.0.4",
     "bootstrap": "^4.5.0",
+    "dotenv": "^8.2.0",
     "factory.ts": "^0.5.1",
     "graphql": "^15.3.0",
     "ngx-markdown": "^10.1.1",
@@ -47,6 +47,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^10.0.1",
     "@angular-devkit/build-angular": "~0.1001.2",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
@@ -61,6 +62,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "dotenv-webpack": "^5.1.0",
     "fast-xml-parser": "^3.17.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
