Move blog from scully to strapi

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
       "dom",
       "esnext.asynciterable"
     ],
-    "allowSyntheticDefaultImports": true,
-    "types": ["node"]
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
