--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "npm run codegen && ng build --prod && npm run scully",
+    "deploy": "npm run codegen && ng build --prod && npm run scully:ci",
     "test": "ng test",
     "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
@@ -13,7 +13,8 @@
     "e2e:ci": "ng e2e --protractor-config=e2e/protractor-ci.conf.js",
     "codegen": "graphql-codegen --config codegen.yml -r dotenv/config",
     "scully": "scully",
-    "scully:serve": "scully serve"
+    "scully:serve": "scully serve",
+    "scully:ci": "scully -- --scanRoutes"
   },
   "private": true,
   "dependencies": {
