--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+env:
+  API_URL: https://metex-cms-stage.herokuapp.com
 jobs:
   ci:
     runs-on: ubuntu-latest
