--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: '12'
       - name: Install Dependencies
         run: npm ci
+      - name: Generate GraphQL
+        run: npm run codegen
       - name: Run Unit Tests
         run: npm run test:ci
       - name: Update Chrome
