--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,13 +18,13 @@ jobs:
           node-version: '12'
       - name: Install Dependencies
         run: npm ci
+      - name: Update Chrome
+        run: sudo apt-get update && sudo apt-get install google-chrome-stable
       - name: Generate GraphQL
         run: npm run codegen
       - name: Build
-        run: npm run build
+        run: npm run build --prod
       - name: Run Unit Tests
         run: npm run test:ci
-      - name: Update Chrome
-        run: sudo apt-get update && sudo apt-get install google-chrome-stable
       - name: Run E2E Tests
         run: npm run e2e:ci
