--- a/package.json
+++ b/package.json
@@ -27,24 +27,24 @@
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
-    "@apollo/client": "^3.0.0",
-    "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@apollo/client": "^3.2.9",
+    "@fortawesome/angular-fontawesome": "^0.8.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@scullyio/init": "^1.0.1",
     "@scullyio/ng-lib": "^1.0.0",
-    "@scullyio/scully": "^1.0.0",
-    "apollo-angular": "^2.0.4",
-    "bootstrap": "^4.5.0",
+    "@scullyio/scully": "^1.0.5",
+    "apollo-angular": "^2.1.0",
+    "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "factory.ts": "^0.5.1",
-    "graphql": "^15.3.0",
+    "graphql": "^15.4.0",
     "ngx-markdown": "^10.1.1",
     "rxjs": "~6.6.0",
     "sass-color-helpers": "^2.1.1",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -57,12 +57,12 @@
     "@graphql-codegen/cli": "1.17.8",
     "@graphql-codegen/introspection": "1.17.8",
     "@graphql-codegen/typescript": "1.17.8",
-    "@graphql-codegen/typescript-apollo-angular": "^2.0.1",
+    "@graphql-codegen/typescript-apollo-angular": "^2.2.1",
     "@graphql-codegen/typescript-operations": "1.17.8",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.19.7",
+    "codelyzer": "^6.0.1",
     "dotenv-webpack": "^5.1.0",
     "fast-xml-parser": "^3.17.4",
     "jasmine-core": "~3.6.0",
@@ -72,10 +72,10 @@
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-mocks": "^10.1.3",
+    "ng-mocks": "^10.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.5"
   }
 }
