--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "codegen": "graphql-codegen --config codegen.yml -r dotenv/config",
     "scully": "scully",
     "scully:serve": "scully serve",
-    "scully:ci": "scully -- --scanRoutes"
+    "scully:ci": "scully -- --scanRoutes",
+    "icons": "npx pwa-asset-generator logo.html ./src/assets/icons -i ./src/index.html -m ./src/manifest.webmanifest -t png -i"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +28,7 @@
     "@angular/platform-browser": "~11.0.2",
     "@angular/platform-browser-dynamic": "~11.0.2",
     "@angular/router": "~11.0.2",
+    "@angular/service-worker": "~11.0.2",
     "@apollo/client": "^3.2.9",
     "@fortawesome/angular-fontawesome": "^0.8.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
