--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -10,6 +10,7 @@
           "/index.html",
           "/manifest.webmanifest",
           "/**/*.html",
+          "/**/data.json",
           "/*.css",
           "/*.js"
         ]
