--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "npm run codegen && ng build --prod && npm run scully:ci",
+    "deploy": "npm run codegen && ng build --prod && npm run scully:ci && npm run pwa:regenerate",
     "test": "ng test",
     "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
@@ -16,7 +16,8 @@
     "scully:serve": "scully serve",
     "scully:ci": "scully -- --scanRoutes",
     "icons": "npx pwa-asset-generator logo.html ./src/assets/icons -i ./src/index.html -m ./src/manifest.webmanifest -t png -i",
-    "pwa": "npm run deploy && http-server -p 8080 -c-1 dist/static"
+    "pwa": "npm run deploy && http-server -p 8080 -c-1 dist/static",
+    "pwa:regenerate": "rm dist/static/ngsw.json;node_modules/.bin/ngsw-config dist/static ./ngsw-config.json"
   },
   "private": true,
   "dependencies": {
