--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "npm run codegen && ng build --prod && npm run scully:ci && npm run pwa:regenerate",
+    "deploy": "npm run codegen && ng build --configuration production && npm run scully:ci && npm run pwa:regenerate",
     "test": "ng test",
     "test:ci": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "e2e:ci": "ng e2e --prod --protractor-config=e2e/protractor-ci.conf.js",
+    "e2e:ci": "ng e2e --configuration production --protractor-config=e2e/protractor-ci.conf.js",
     "codegen": "graphql-codegen --config codegen.yml -r dotenv/config",
     "scully": "scully",
     "scully:serve": "scully serve",
@@ -21,17 +21,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.2",
-    "@angular/common": "~11.0.2",
-    "@angular/compiler": "~11.0.2",
-    "@angular/core": "~11.0.2",
-    "@angular/forms": "~11.0.2",
-    "@angular/localize": "~11.0.2",
-    "@angular/platform-browser": "~11.0.2",
-    "@angular/platform-browser-dynamic": "~11.0.2",
-    "@angular/router": "~11.0.2",
-    "@angular/service-worker": "~11.0.2",
-    "@apollo/client": "^3.2.9",
+    "@angular/animations": "~12.2.13",
+    "@angular/common": "~12.2.13",
+    "@angular/compiler": "~12.2.13",
+    "@angular/core": "~12.2.13",
+    "@angular/forms": "~12.2.13",
+    "@angular/localize": "~12.2.13",
+    "@angular/platform-browser": "~12.2.13",
+    "@angular/platform-browser-dynamic": "~12.2.13",
+    "@angular/router": "~12.2.13",
+    "@angular/service-worker": "~12.2.13",
+    "@apollo/client": "^3.4.17",
     "@fortawesome/angular-fontawesome": "^0.8.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
@@ -40,22 +40,22 @@
     "@scullyio/init": "^1.0.1",
     "@scullyio/ng-lib": "^1.0.0",
     "@scullyio/scully": "^1.0.5",
-    "apollo-angular": "^2.1.0",
+    "apollo-angular": "^2.6.0",
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "factory.ts": "^0.5.1",
-    "graphql": "^15.4.0",
+    "graphql": "^16.0.1",
     "ngx-markdown": "^11.1.3",
     "rxjs": "~6.6.0",
     "sass-color-helpers": "^2.1.1",
     "tslib": "^2.0.3",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^10.0.1",
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.2",
+    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular/cli": "~12.2.13",
+    "@angular/compiler-cli": "~12.2.13",
     "@gammastream/scully-plugin-http404": "^1.0.4",
     "@gammastream/scully-plugin-sitemap": "^1.0.4",
     "@graphql-codegen/cli": "1.17.8",
@@ -73,15 +73,15 @@
     "http-server": "^0.12.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-mocks": "^10.5.4",
+    "ng-mocks": "^12.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.3.5"
   }
 }
