Initial Journeys work

--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "metex",
       "architect": {
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
